<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:maxHeight="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:id="@+id/imageView3"
                app:srcCompat="@drawable/ic_menu_camera" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_name"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/textView26"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:layout_weight="0.3"
                android:id="@+id/edt_text_product_name" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_barcode"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_barcode"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_weight="0.3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_price"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_price"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edt_num_product_price"
                android:layout_weight="0.3" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_qty"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_qty"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edt_num_product_qty"
                android:layout_weight="0.3" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_type"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_type"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/text_product_type"
                android:layout_weight="0.7"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_cost"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_cost"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText9"
                android:layout_weight="0.7" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:text="@string/label_product_details"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/label_product_details"
                android:layout_weight="0.3"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText8"
                android:layout_weight="0.7" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="60dp">

            <Button
                android:text="@android:string/cancel"
                android:layout_width="wrap_content"
                android:id="@+id/btn_cancel"

                android:layout_alignBaseline="@+id/btn_cancel"
                android:layout_alignBottom="@+id/btn_cancel"
                android:layout_alignParentStart="true"
                android:layout_marginStart="56dp"
                android:layout_height="wrap_content" />

            <Button
                android:text="@android:string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/btn_cancel"
                android:layout_marginTop="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="57dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>